WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32417
[Qt] The "Search" input type is not rendered correctly when styled.
https://bugs.webkit.org/show_bug.cgi?id=32417
Summary
[Qt] The "Search" input type is not rendered correctly when styled.
Petri Ojala
Reported
2009-12-11 04:12:17 PST
Load any page that has a styled "search" input such as:
http://waplabdc.nokia-boston.com/browser/users/caszabo/feat/forms/search3.htm
Result: the "Search" input type is not rendered correctly when styled.
Attachments
Proposed Patch
(1.51 KB, patch)
2009-12-18 12:35 PST
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carol Szabo
Comment 1
2009-12-11 05:09:28 PST
This is partly covered under
bug 30173
Carol Szabo
Comment 2
2009-12-18 08:31:04 PST
Patch coming soon.
Carol Szabo
Comment 3
2009-12-18 12:35:02 PST
Created
attachment 45173
[details]
Proposed Patch This patch changes the handling of the search control, deferring the painting of the background and borders to WebCore.
WebKit Review Bot
Comment 4
2009-12-18 12:38:21 PST
style-queue ran check-webkit-style on
attachment 45173
[details]
without any errors.
Eric Seidel (no email)
Comment 5
2009-12-22 16:45:28 PST
Comment on
attachment 45173
[details]
Proposed Patch Doesn't Qt have pixel test results which will need updating? I guess those can be done separate...
WebKit Commit Bot
Comment 6
2009-12-22 18:26:19 PST
Comment on
attachment 45173
[details]
Proposed Patch Clearing flags on attachment: 45173 Committed
r52518
: <
http://trac.webkit.org/changeset/52518
>
WebKit Commit Bot
Comment 7
2009-12-22 18:26:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug