2009-12-22  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Eric Seidel.

        [Qt] The "Search" input type is not rendered correctly when styled.
        https://bugs.webkit.org/show_bug.cgi?id=32417

        There are no new tests because only pixel tests may be affected by
        this change and those changes can only be done on the build bot.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintSearchField):
        Since currently we paint the Search control as a QLineEdit, I have
        deferred painting to WebCore, as in the case of the text input so
        that the painting is consistent.

Canonical link: https://commits.webkit.org/43931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52518 268f45cc-cd09-0410-ab3c-d52691b4dbfc